fix loader not visible

--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
 	bottom: 0;
 
 	background: #000;
-	color: #000;
+	color: #fff;
 
 	overflow: hidden;
 	font-family: 'Courier New', Courier, monospace;
